fixed the isuee with image not being covered the entire space of parent

--- a/components/embedded-view-components/picture-component/picture-component.module.css
+++ b/components/embedded-view-components/picture-component/picture-component.module.css
@@ -24,7 +24,9 @@
         @apply w-full h-full my-auto;
     }
     &.freeStyle img{
-
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
     }
 }
 .noSpecialStyle{
